--- a/src/client/app.css
+++ b/src/client/app.css
@@ -1,27 +1,114 @@
+/* ------------------------------------------------------ */
+/* BASIC SETUP */
+/* ------------------------------------------------------ */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  background-color: #fff;
+  color: #555;
+  font-family: "Lato", "Arial", sans-serif;
+  font-weight: 300;
+  text-rendering: optimizeLegibility;
+}
+
+.clearfix {
+  zoom: 1;
+}
+.clearfix:after {
+  content: ".";
+  clear: both;
+  display: block;
+  height: 0;
+  visibility: hidden;
+}
+
+/* ------------------------------------------------------ */
+/* REUSABLE COMPONENTS */
+/* ------------------------------------------------------ */
+
+.row {
+  margin: 0 auto;
+}
+
+section {
+}
+
+.box {
+  padding: 1%;
+}
+
+/* ----- HEADINGS ----- */
+
+h1,
+h2,
+h3 {
+  font-weight: 300;
+  text-transform: uppercase;
+}
+
 h1 {
-  color: green;
+  color: rgb(51, 81, 117);
+  margin: 0;
+  font-size: 240%;
+  word-spacing: 4px;
+  letter-spacing: 1px;
 }
 
-body {
+h2 {
+  font-size: 180%;
+  word-spacing: 2px;
   text-align: center;
-  margin: auto;
+  margin-bottom: 30px;
+  letter-spacing: 1px;
 }
 
-.song-list {
-  display: flex;
-  justify-content: center;
+h3 {
+  font-size: 110%;
+  margin-bottom: 15px;
 }
 
-.heading {
-  height: 54px;
-  width: 100%;
+/* ------------------------------------------------------ */
+/* HEADER */
+/* ------------------------------------------------------ */
+
+header {
   padding: 10px;
   margin-bottom: 10px;
-  box-shadow: 0 30px 40px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 30px 40px rgba(0, 1, 22, 0.1);
+}
+
+header .row {
+  margin: 0;
+}
+
+header h1 {
+  float: left;
+  margin-left: 20px;
+}
+
+header a,
+header button {
+  float: right;
+  margin-right: 20px;
 }
 
 .btn-primary {
-  color: #fff;
+  color: rgb(255, 255, 255);
   background-color: rgb(51, 81, 117);
   border-color: rgb(51, 81, 117);
+}
+
+/* ------------------------------------------------------ */
+/* MAIN SECTION */
+/* ------------------------------------------------------ */
+
+.now-playing {
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
