--- a/src/client/components/search-bar/styles.css
+++ b/src/client/components/search-bar/styles.css
@@ -12,7 +12,7 @@ input {
   border: 1px solid #ccc;
 }
 
-.search-bar ion-icon {
+.search-bar i {
   position: absolute;
   top: 10px;
   left: 10px;
