--- a/src/client/components/song-card/styles.css
+++ b/src/client/components/song-card/styles.css
@@ -23,6 +23,13 @@
   padding-top: 10px;
   width: calc(100% - 150px);
   height: 100%;
+
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .song-details {
