Conditional rotating for texts

--- a/src/client/components/search-list/styles.css
+++ b/src/client/components/search-list/styles.css
@@ -17,7 +17,11 @@
 }
 
 .serach-results-list li div {
-  padding: 5px 5px;
+  padding: 5px 10px;
+  overflow: hidden;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .serach-results-list li:first-child {
