--- a/src/client/components/rotating-text/styles.css
+++ b/src/client/components/rotating-text/styles.css
@@ -1,28 +1,29 @@
 .container {
-  display: flex;
-  align-items: center;
   overflow: hidden;
-  width: 300px;
-  margin: 0 10px;
+  width: 100%;
+  white-space: nowrap;
 }
 
-.banner {
-  white-space: nowrap;
+.container .separation {
+  width: 20%;
+}
+
+.animation {
+  display: inline-block;
   animation-name: scrolling;
-  animation-duration: 10s;
+  animation-duration: 20s;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
-}
-
-.banner:hover {
-  animation-play-state: paused;
 }
 
 @keyframes scrolling {
   0% {
     transform: translateX(0%);
   }
+  20% {
+    transform: translateX(0%);
+  }
   100% {
-    transform: translateX(-50%);
+    transform: translateX(-113%);
   }
 }
