--- a/src/client/app.css
+++ b/src/client/app.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 14px;
   line-height: 1.5;
   font-weight: 300;
@@ -25,7 +25,7 @@ body {
   zoom: 1;
 }
 .clearfix:after {
-  content: ".";
+  content: '.';
   clear: both;
   display: block;
   height: 0;
@@ -73,9 +73,10 @@ h1 {
 }
 
 h2 {
+  color: #fff;
   font-size: 180%;
+  font-weight: 200;
   word-spacing: 2px;
-  text-align: center;
   margin-bottom: 30px;
   letter-spacing: 1px;
 }
@@ -90,7 +91,6 @@ h3 {
 
 header {
   padding: 5px;
-  margin-bottom: 20px;
   box-shadow: 0 30px 40px rgba(0, 1, 22, 0.1);
 }
 
@@ -115,8 +115,10 @@ header button {
   text-decoration: none;
   border: 1px solid #ccc;
   margin: 10px 0 10px 0;
+  cursor: pointer;
 }
 
+.btn-login,
 .btn-login:link,
 .btn-login:visited {
   color: rgb(255, 255, 255);
@@ -149,8 +151,190 @@ header button {
 /* MAIN SECTION */
 /* ------------------------------------------------------ */
 
+.section-main {
+  padding-top: 30px;
+}
+
 .now-playing {
   display: flex;
   justify-content: center;
   width: 100%;
+}
+
+/* ------------------------------------------------------ */
+/* HOME */
+/* ------------------------------------------------------ */
+
+.section-home {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url(./images/eric-nopanen-8e0EHPUx3Mo-unsplash.jpg);
+  background-size: cover;
+  background-position: center;
+  height: calc(100vh - 63px);
+  background-attachment: fixed;
+  position: relative;
+}
+
+.home-text-box {
+  position: absolute;
+  top: 15%;
+  left: 10%;
+}
+
+.section-home span {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  color: #6e6e6e;
+}
+
+.section-home span a {
+  text-decoration: none;
+  color: #6e6e6e;
+}
+
+/* ------------------------------------------------------ */
+/* LOUNGE */
+/* ------------------------------------------------------ */
+
+.section-lobby {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url(./images/matt-botsford-OKLqGsCT8qs-unsplash.jpg);
+  background-size: cover;
+  background-position: center;
+  height: calc(100vh - 63px);
+  background-attachment: fixed;
+  position: relative;
+}
+
+.lobby-left-box {
+  padding: 25% 18%;
+}
+
+.lobby-left-box input[type='text'] {
+  color: #5c5c5c;
+  border: none;
+  margin-bottom: 40px;
+}
+
+.lobby-left-box input[type='text']:invalid:not(:focus):not(:placeholder-shown) {
+  box-shadow: none;
+}
+
+.lobby-left-box input[type='text']:invalid:focus {
+  box-shadow: 0 0 5px #d71e1e;
+}
+
+.make-public {
+  position: relative;
+  cursor: pointer;
+  margin-left: 30px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.make-public input {
+  display: none;
+  cursor: pointer;
+}
+.make-public span {
+  position: absolute;
+  top: 1px;
+  left: 5px;
+  height: 15px;
+  width: 15px;
+  cursor: pointer;
+  background-color: #eee;
+  border-radius: 2px;
+}
+
+.make-public:hover .checkmark {
+  background-color: #b9b9b9;
+}
+
+.make-public input:checked + .checkmark {
+  background-color: #1ed760;
+}
+
+.checkmark:after {
+  content: '';
+  position: absolute;
+  display: none;
+}
+
+.checkmark:after:hover {
+  left: 0px;
+  top: 0px;
+}
+
+.make-public input:checked + .checkmark:after {
+  display: block;
+}
+
+.make-public .checkmark:after {
+  left: 4px;
+  top: 1px;
+  width: 5px;
+  height: 8px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.lobby-left-box h3 {
+  display: inline-block;
+  margin-left: 30px;
+}
+
+.lobby-right-box {
+  padding: 5%;
+}
+
+.photo-by {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  color: #6e6e6e;
+}
+
+.photo-by a {
+  text-decoration: none;
+  color: #6e6e6e;
+}
+
+/* ------------------------------------------------------ */
+/* 404 - NOT FOUND */
+/* ------------------------------------------------------ */
+
+.section-not-found {
+  position: relative;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url(./images/bruno-cervera-dtqlaz4HyHw-unsplash.jpg);
+  background-size: cover;
+  background-position: center;
+  height: calc(100vh - 63px);
+  background-attachment: fixed;
+}
+
+.not-found-text-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.section-not-found span {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  color: #252525;
+}
+
+.section-not-found span a {
+  text-decoration: none;
+  color: #252525;
 }
