Refactor main components to their own folders

--- a/src/client/app.css
+++ b/src/client/app.css
@@ -85,256 +85,24 @@ h3 {
   font-size: 110%;
 }
 
-/* ------------------------------------------------------ */
-/* HEADER */
-/* ------------------------------------------------------ */
-
-header {
-  padding: 5px;
-  box-shadow: 0 30px 40px rgba(0, 1, 22, 0.1);
-}
-
-header .row {
-  margin: 0;
-}
-
-header h1 {
-  float: left;
-  margin-left: 20px;
-}
-
-header a,
-header button {
-  float: right;
-}
+/* ----- BUTTONS ----- */
 
 .btn {
+  font-weight: 500;
   padding: 5px 20px;
   font-weight: 500;
   border-radius: 20px;
   text-decoration: none;
+  cursor: pointer;
   border: 1px solid #ccc;
   margin: 10px 0 10px 0;
-  cursor: pointer;
 }
 
-.btn-login,
-.btn-login:link,
-.btn-login:visited {
-  color: rgb(255, 255, 255);
-  background-color: #1db954;
-  border-color: #1db954;
-  transition: background-color 300ms, border-color 300ms;
-  margin: 10px 0 10px 0;
-  text-transform: uppercase;
-}
+/* ----- IMAGES ----- */
 
-.btn-login:hover,
-.btn-login:active {
-  background-color: #1ed760;
-  border-color: #1ed760;
-}
-
-.btn-user {
-  width: 175px;
-  padding: 0;
-  border: none;
-  background-color: #f6f5f4;
-}
-
-.btn-user:hover {
-  cursor: pointer;
-  color: #1ed760;
-}
-
-/* ------------------------------------------------------ */
-/* MAIN SECTION */
-/* ------------------------------------------------------ */
-
-.section-main {
-  padding-top: 30px;
-}
-
-.now-playing {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-}
-
-/* ------------------------------------------------------ */
-/* HOME */
-/* ------------------------------------------------------ */
-
-.section-home {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url(./images/eric-nopanen-8e0EHPUx3Mo-unsplash.jpg);
+.background-img {
   background-size: cover;
   background-position: center;
-  height: calc(100vh - 63px);
+  height: 100vh;
   background-attachment: fixed;
-  position: relative;
-}
-
-.home-text-box {
-  position: absolute;
-  top: 15%;
-  left: 10%;
-}
-
-.section-home span {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  color: #6e6e6e;
-}
-
-.section-home span a {
-  text-decoration: none;
-  color: #6e6e6e;
-}
-
-/* ------------------------------------------------------ */
-/* LOUNGE */
-/* ------------------------------------------------------ */
-
-.section-lobby {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url(./images/matt-botsford-OKLqGsCT8qs-unsplash.jpg);
-  background-size: cover;
-  background-position: center;
-  height: calc(100vh - 63px);
-  background-attachment: fixed;
-  position: relative;
-}
-
-.lobby-left-box {
-  padding: 25% 18%;
-}
-
-.lobby-left-box input[type='text'] {
-  color: #5c5c5c;
-  border: none;
-  margin-bottom: 40px;
-}
-
-.lobby-left-box input[type='text']:invalid:not(:focus):not(:placeholder-shown) {
-  box-shadow: none;
-}
-
-.lobby-left-box input[type='text']:invalid:focus {
-  box-shadow: 0 0 5px #d71e1e;
-}
-
-.make-public {
-  position: relative;
-  cursor: pointer;
-  margin-left: 30px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-.make-public input {
-  display: none;
-  cursor: pointer;
-}
-.make-public span {
-  position: absolute;
-  top: 1px;
-  left: 5px;
-  height: 15px;
-  width: 15px;
-  cursor: pointer;
-  background-color: #eee;
-  border-radius: 2px;
-}
-
-.make-public:hover .checkmark {
-  background-color: #b9b9b9;
-}
-
-.make-public input:checked + .checkmark {
-  background-color: #1ed760;
-}
-
-.checkmark:after {
-  content: '';
-  position: absolute;
-  display: none;
-}
-
-.checkmark:after:hover {
-  left: 0px;
-  top: 0px;
-}
-
-.make-public input:checked + .checkmark:after {
-  display: block;
-}
-
-.make-public .checkmark:after {
-  left: 4px;
-  top: 1px;
-  width: 5px;
-  height: 8px;
-  border: solid white;
-  border-width: 0 3px 3px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-.lobby-left-box h3 {
-  display: inline-block;
-  margin-left: 30px;
-}
-
-.lobby-right-box {
-  padding: 5%;
-}
-
-.photo-by {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  color: #6e6e6e;
-}
-
-.photo-by a {
-  text-decoration: none;
-  color: #6e6e6e;
-}
-
-/* ------------------------------------------------------ */
-/* 404 - NOT FOUND */
-/* ------------------------------------------------------ */
-
-.section-not-found {
-  position: relative;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url(./images/bruno-cervera-dtqlaz4HyHw-unsplash.jpg);
-  background-size: cover;
-  background-position: center;
-  height: calc(100vh - 63px);
-  background-attachment: fixed;
-}
-
-.not-found-text-box {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.section-not-found span {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  color: #252525;
-}
-
-.section-not-found span a {
-  text-decoration: none;
-  color: #252525;
 }
