Add share button

--- a/src/client/common-components/search-list/styles.css
+++ b/src/client/common-components/search-list/styles.css
@@ -1,7 +1,7 @@
 .serach-results {
-  padding: 30px 0 0 20px;
+  padding: 15px 0 0 0;
   width: 90%;
-  margin: 0 auto;
+  margin: 0 3% 0 7%;
   color: #6e6e6e;
 
   -webkit-touch-callout: none;
