Disconnect from spotify player when radio unmounts

--- a/src/client/app.css
+++ b/src/client/app.css
@@ -32,6 +32,11 @@ body {
   visibility: hidden;
 }
 
+button,
+input {
+  outline: none;
+}
+
 /* ------------------------------------------------------ */
 /* REUSABLE COMPONENTS */
 /* ------------------------------------------------------ */
