Refresh access token when auth fails in spotify sdk

--- a/src/client/app.css
+++ b/src/client/app.css
@@ -37,6 +37,15 @@ input {
   outline: none;
 }
 
+::-moz-selection {
+  /* Code for Firefox */
+  color: #1ed760;
+}
+
+::selection {
+  color: #1ed760;
+}
+
 /* ------------------------------------------------------ */
 /* REUSABLE COMPONENTS */
 /* ------------------------------------------------------ */
