--- a/src/client/main-components/radio/styles.css
+++ b/src/client/main-components/radio/styles.css
@@ -1,12 +1,12 @@
-.radio-search {
-  padding-top: 30px;
-}
-
 .radio-header {
   padding: 20px 0;
 }
 .radio-header .row div:first-of-type {
   padding-left: 50px;
+}
+
+.radio-header .row div:nth-child(2) {
+  padding-left: 5%;
 }
 
 .radio-header .share-radio {
@@ -18,4 +18,41 @@
   justify-content: center;
   width: 90%;
   margin-left: 10%;
+}
+
+.right-panel {
+  margin: 0 3% 0 7%;
+}
+
+.component-selector {
+  margin-bottom: 10px;
+}
+
+.component-selector span {
+  cursor: pointer;
+  padding: 2px 20px 0 20px;
+  margin: 0 1px;
+  border-top: 1px solid #d6d6d6;
+  border-left: 1px solid #d6d6d6;
+  border-right: 1px solid #d6d6d6;
+  border-radius: 10px 10px 0 0;
+}
+
+.component-selector span:hover {
+  font-weight: 400;
+}
+
+.component-selector .selected {
+  color: #1ed760;
+}
+
+.radio-chat .chat-box {
+  width: 100%;
+  height: 50vh;
+  box-shadow: inset 0 0 5px 2px #d6d6d6;
+  border-radius: 10px;
+}
+
+.radio-chat input {
+  margin-top: 20px;
 }
