--- a/src/client/main-components/radio/styles.css
+++ b/src/client/main-components/radio/styles.css
@@ -48,11 +48,32 @@
 
 .radio-chat .chat-box {
   width: 100%;
-  height: 50vh;
+  height: 330px;
+  padding: 5px 20px;
   box-shadow: inset 0 0 5px 2px #d6d6d6;
   border-radius: 10px;
+  overflow: hidden;
 }
 
+.radio-chat .chat-box ul {
+  list-style: none;
+}
+
+.fading li:first-child {
+  opacity: 0.1;
+}
+
+.fading li:nth-child(2) {
+  opacity: 0.3;
+}
+
+.radio-chat .chat-box ul li img {
+  height: 30px;
+  width: 30px;
+  vertical-align: middle;
+  border-radius: 50%;
+  margin: 5px;
+}
 .radio-chat input {
   margin-top: 20px;
 }
