--- a/src/client/app.css
+++ b/src/client/app.css
@@ -117,6 +117,6 @@ h3 {
 .background-img {
   background-size: cover;
   background-position: center;
-  height: 100vh;
+  height: calc(100vh - 60px);
   background-attachment: fixed;
 }
