--- a/src/client/common-components/search-list/styles.css
+++ b/src/client/common-components/search-list/styles.css
@@ -9,43 +9,68 @@
   -ms-user-select: none;
   user-select: none;
 }
-
-.serach-results-list {
+.serach-results-header {
   list-style: none;
 }
 
-.serach-results-list li div {
+.serach-results-header li {
+  font-weight: 400;
+  color: #6e6e6e;
+  border-bottom: 1px solid #b5b5b5;
+}
+
+.serach-results-header li:hover {
+  box-shadow: none;
+}
+
+.serach-results-header li div {
+  padding: 5px 10px;
+}
+
+.scroll-results-list {
+  list-style: none;
+  height: calc(100vh - 270px);
+  overflow-y: scroll;
+
+  scrollbar-width: none;
+  scrollbar-color: #ffffff #ffffff;
+}
+
+.scroll-results-list::-webkit-scrollbar {
+  width: 0px;
+}
+
+.scroll-results-list::-webkit-scrollbar-track {
+  background-color: #ffffff;
+}
+
+.scroll-results-list::-webkit-scrollbar-thumb {
+  background-color: #ffffff;
+  border-radius: 5px;
+}
+
+.scroll-results-list li div {
   padding: 5px 10px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
-.serach-results-list li:first-child {
-  font-weight: 400;
-  color: #6e6e6e;
-  border-bottom: 1px solid #b5b5b5;
-}
-
-.serach-results-list li:first-child:hover {
-  box-shadow: none;
-}
-
-.serach-results-list li {
+.scroll-results-list li {
   border-bottom: 1px solid #cccccc;
 }
 
-.serach-results-list li:hover {
-  box-shadow: 0 1px 2px #6e6e6e, 0 -1px 2px #6e6e6e;
+.scroll-results-list li:hover {
+  box-shadow: 0 1px 2px #cccccc, 0 -1px 2px #cccccc;
   cursor: pointer;
 }
 
-.serach-results-list li:active {
+.scroll-results-list li:active {
   box-shadow: 0 1px 2px #1ed760, 0 -1px 2px #1ed760;
   color: #1ed760;
 }
 
-.serach-results-list li div i {
+.scroll-results-list li div i {
   float: right;
   vertical-align: middle;
   color: #1ed760;
