--- a/src/client/main-components/radio/styles.css
+++ b/src/client/main-components/radio/styles.css
@@ -54,7 +54,7 @@
 
 .radio-chat .chat-box {
   width: 100%;
-  height: 330px;
+  height: calc(100vh - 260px);
   padding: 5px 20px;
   box-shadow: inset 0 0 5px 2px #d6d6d6;
   border-radius: 10px;
