Start spotify player muted and let user decide when to start listening

--- a/src/client/common-components/radio-queue/styles.css
+++ b/src/client/common-components/radio-queue/styles.css
@@ -10,6 +10,10 @@
   scrollbar-color: #dadada #eeeeee;
 }
 
+.radio-queue.transparent {
+  opacity: 0.3;
+}
+
 .radio-queue::-webkit-scrollbar {
   width: 6px;
 }
