--- a/src/client/main-components/radio/styles.css
+++ b/src/client/main-components/radio/styles.css
@@ -111,18 +111,25 @@
   color: #6b6b6b;
 }
 
+.radio-chat .chat-box ul li .chat-message-container {
+  display: inline-block;
+  width: calc(100% - 80px);
+  margin-top: 10px;
+}
+
 .radio-chat .chat-box ul li img {
+  vertical-align: top;
   height: 30px;
   width: 30px;
-  vertical-align: middle;
   border-radius: 50%;
   margin: 5px;
 }
 
 .radio-chat .chat-box ul li i {
+  vertical-align: top;
+  padding: 3px;
   height: 30px;
   width: 30px;
-  vertical-align: middle;
   margin: 5px;
 }
 
