--- a/src/client/main-components/radio/styles.css
+++ b/src/client/main-components/radio/styles.css
@@ -100,10 +100,11 @@
   box-shadow: inset 0 0 5px 2px #d6d6d6;
   border-radius: 10px;
   overflow-y: scroll;
-
-  display: flex;
-  flex-direction: column-reverse;
   list-style: none;
+}
+
+.radio-chat .chat-box li {
+  vertical-align: bottom;
 }
 
 .radio-chat .chat-box li span:first-of-type {
