Played songs listening to subscriptions api

--- a/src/client/common-components/song-item/styles.css
+++ b/src/client/common-components/song-item/styles.css
@@ -5,6 +5,7 @@
   box-shadow: 0 2px 5px #d4d3d3;
   border-radius: 5px;
   margin-bottom: 20px;
+  background-color: #ffffff;
 }
 
 .song-item img {
